test/forgetSynthesis4.slq
def main() {
	x:=1:ğ”¹;
	y:=0:ğ”¹;
	if x{
		y:=H(y);
	}
	return nonQfree(x, y);
}

def nonQfree(const x:B,y:B){
	t := dup(x);
	t := H(t);
	t := I(t); // error
	if t{
		y := X(y);
	}
	return (x, y);
}
